// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Container-flex Container-inline"
      style="align-items: center;"
    >
      <button
        class="MuiButtonBase-root makeStyles-small makeStyles-secondaryBlue makeStyles-root"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          Prev
        </span>
      </button>
      <button
        class="MuiButtonBase-root makeStyles-small makeStyles-secondaryBlue makeStyles-root Pagination-rangeButton"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          1
        </span>
      </button>
      <div
        class="Pagination-ellipsis"
      >
        <p
          class="MuiTypography-root Typography-bodySmall Typography-semibold Typography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <button
        class="MuiButtonBase-root makeStyles-small makeStyles-secondaryBlue makeStyles-root Pagination-rangeButton"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          4
        </span>
      </button>
      <button
        class="MuiButtonBase-root makeStyles-small makeStyles-primaryBlue makeStyles-root Pagination-rangeButton"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          5
        </span>
      </button>
      <button
        class="MuiButtonBase-root makeStyles-small makeStyles-secondaryBlue makeStyles-root Pagination-rangeButton"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          6
        </span>
      </button>
      <div
        class="Pagination-ellipsis"
      >
        <p
          class="MuiTypography-root Typography-bodySmall Typography-semibold Typography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <button
        class="MuiButtonBase-root makeStyles-small makeStyles-secondaryBlue makeStyles-root Pagination-rangeButton"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          20
        </span>
      </button>
      <button
        class="MuiButtonBase-root makeStyles-small makeStyles-secondaryBlue makeStyles-root"
        tabindex="0"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          Next
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Container-flex Container-inline"
      style="align-items: center;"
    >
      <button
        class="MuiButtonBase-root makeStyles-small makeStyles-secondaryDisabled makeStyles-root Mui-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          Prev
        </span>
      </button>
      <button
        class="MuiButtonBase-root makeStyles-small makeStyles-secondaryDisabled makeStyles-root Pagination-rangeButton Mui-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          1
        </span>
      </button>
      <div
        class="Pagination-ellipsis"
      >
        <p
          class="MuiTypography-root Typography-bodySmall Typography-semibold Typography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <button
        class="MuiButtonBase-root makeStyles-small makeStyles-secondaryDisabled makeStyles-root Pagination-rangeButton Mui-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          4
        </span>
      </button>
      <button
        class="MuiButtonBase-root makeStyles-small makeStyles-primaryDisabled makeStyles-root Pagination-rangeButton Mui-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          5
        </span>
      </button>
      <button
        class="MuiButtonBase-root makeStyles-small makeStyles-secondaryDisabled makeStyles-root Pagination-rangeButton Mui-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          6
        </span>
      </button>
      <div
        class="Pagination-ellipsis"
      >
        <p
          class="MuiTypography-root Typography-bodySmall Typography-semibold Typography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <button
        class="MuiButtonBase-root makeStyles-small makeStyles-secondaryDisabled makeStyles-root Pagination-rangeButton Mui-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          20
        </span>
      </button>
      <button
        class="MuiButtonBase-root makeStyles-small makeStyles-secondaryDisabled makeStyles-root Mui-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="Container-flex Container-inline makeStyles-content"
          style="align-items: center;"
        >
          Next
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders nothing for 0 pages 1`] = `
<div>
  <div
    class="Picasso-root"
  />
</div>
`;

exports[`renders nothing for 1 page 1`] = `
<div>
  <div
    class="Picasso-root"
  />
</div>
`;
